Revert "update common and data-provider"
This reverts commit a3e70a1a48d13193d9f28a2d91089d5b253d3e91.
Change was incomplete - many modules still reference version
2.1.0 (Sodium-based) of CCSDK parent poms, causing version
conflicts in odlsli docker.

Issue-ID: CCSDK-3076
Signed-off-by: Dan Timoney <dtimoney@att.com>
Change-Id: I447371239a1bfe102b705e7ecbd964f368780657